# penelope_aerospace_pl_interfaces

./: .gitlab-ci.yml  CHANGELOG.rst  LICENSE  README.md
.github/workflows/: industrial_ci_action.yml
penelope_aerospace_pl_interfaces_examples/: package.xml  setup.cfg  setup.py
penelope_aerospace_pl_interfaces_examples/penelope_aerospace_pl_interfaces_examples/: General_info_inputs.py  cobot_TCP_server.py  cobot_program.py  create_action_obj.py  csv_creator.py  example_action_client.py  example_action_server.py  fokker_action_server.py  get_str_function.py  induct_action_server.py  orchestrator_mainv0.py  tcp_ip_client.py
penelope_aerospace_pl_msgs/: CMakeLists.txt  package.xml
penelope_aerospace_pl_msgs/action/: AccurateStringerPlacement.action  CobotDrill.action  CobotOp.action  DvmInspect.action  ExampleAction.action  InductionWeld.action  InfraredThermographyInspect.action  NdtInspect.action  StringerPlace.action
penelope_aerospace_pl_msgs/msg/: AssemblyAction.msg  AssemblyActionState.msg  AssemblyActionType.msg  AssemblyAgent.msg  AssemblyDrill.msg  AssemblyEe.msg  AssemblyEeDockingPos.msg  AssemblyEeState.msg  AssemblyFast.msg  AssemblyFastState.msg  AssemblyHoleLocation.msg  AssemblyHoleLocationContainer.msg  AssemblyMaterialLayer.msg  AssemblyTempFast.msg  AssemblyWaypoint.msg  CobotDrillingHole.msg  CobotDrillingHoleArray.msg  CobotDrillingHoleState.msg  CobotDrillingState.msg  CobotOpState.msg  CobotState.msg  DvmState.msg  InductionWeldingState.msg  InfraredThermographyState.msg  InspectNdtState.msg  ModuleState.msg  NdtInspectState.msg  ResultCodes.msg  SolidPrimitiveStamped.msg  StringerPlaceState.msg  TriggersState.msg
