<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>penelope_aerospace_pl_interfaces_examples</name>
  <version>1.0.1</version>
  <description>Simple example of a ROS2 action server and client for the PeneloPe specific interfaces</description>
  <maintainer email="e.bernardi@tudelft.nl">Eugenio Bernardi</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>penelope_aerospace_pl_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>