<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>penelope_aerospace_pl_msgs</name>
  <version>1.0.2</version>
  <description>Message and action definition of the PeneloPe interfaces used by the Digital Thread.</description>
  <maintainer email="d.kroezen@tudelft.nl">D. Kroezen</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
