<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>penelope_aerospace_pl_msgs</name>
  <version>1.0.2</version>
  <description>Message and action definition of the PeneloPe interfaces used by the Digital Thread.</description>
  <maintainer email="d.kroezen@tudelft.nl">D. Kroezen</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

</package>
